--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/uittorio/quotes#readme",
   "devDependencies": {
     "@types/jasmine": "2.8.8",
+    "axios": "0.18.0",
     "do-nothing-loader": "1.0.0",
     "electron": "2.0.8",
     "electron-builder": "20.28.3",
