show list of quotes

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "electron-webpack": "2.3.1",
     "jasmine": "3.2.0",
     "jasmine-ts": "0.2.1",
+    "smalltalk": "3.2.0",
     "ts-loader": "5.0.0",
     "typescript": "3.0.3",
+    "uuid": "3.3.2",
     "vue": "2.5.17",
     "vue-loader": "15.4.1",
     "vue-svg-loader": "0.9.0",
