--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "electron-webpack": "2.3.1",
     "jasmine": "3.2.0",
     "jasmine-ts": "0.2.1",
+    "node-sass": "4.9.3",
+    "sass-loader": "7.1.0",
     "smalltalk": "3.2.0",
     "ts-loader": "5.0.0",
     "typescript": "3.0.3",
