--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "random programming quotes",
   "scripts": {
     "start": "electron-webpack dev",
-    "build": "electron-webpack && electron-builder -mw",
+    "build-w": "electron-webpack && electron-builder -w",
+    "build-m": "electron-webpack && electron-builder -m",
     "test": "jasmine-ts \"spec/**/*.spec.ts\""
   },
   "build": {
@@ -27,28 +28,29 @@
   },
   "homepage": "https://github.com/uittorio/quotes#readme",
   "devDependencies": {
-    "@types/jasmine": "2.8.8",
+    "@types/jasmine": "3.3.12",
     "axios": "0.18.0",
     "do-nothing-loader": "1.0.0",
-    "electron": "2.0.8",
-    "electron-builder": "20.28.3",
-    "electron-store": "2.0.0",
-    "electron-webpack": "2.6.1",
-    "jasmine": "3.2.0",
-    "jasmine-ts": "0.2.1",
-    "node-sass": "4.9.3",
+    "electron": "5.0.1",
+    "electron-builder": "20.39.0",
+    "electron-store": "3.2.0",
+    "electron-webpack": "2.6.2",
+    "jasmine": "3.4.0",
+    "jasmine-ts": "0.3.0",
+    "node-sass": "4.12.0",
     "sass-loader": "7.1.0",
-    "smalltalk": "3.2.0",
-    "ts-loader": "5.0.0",
-    "typescript": "3.0.3",
+    "smalltalk": "3.4.0",
+    "ts-loader": "6.0.0",
+    "ts-node": "8.1.0",
+    "typescript": "3.4.5",
     "uuid": "3.3.2",
-    "vue": "2.5.17",
-    "vue-loader": "15.4.1",
-    "vue-svg-loader": "0.9.0",
-    "vue-template-compiler": "2.5.17",
-    "webpack": "4.17.1"
+    "vue": "2.6.10",
+    "vue-loader": "15.7.0",
+    "vue-svg-loader": "0.12.0",
+    "vue-template-compiler": "2.6.10",
+    "webpack": "4.31.0"
   },
   "dependencies": {
-    "source-map-support": "0.5.9"
+    "source-map-support": "0.5.12"
   }
 }
